<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.littlebeachblog.ui.page.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_fishDetailActivity"
            app:destination="@id/fishDetailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_blog"
        android:name="com.example.littlebeachblog.ui.page.blog.BlogFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_blog" />

    <fragment
        android:id="@+id/navigation_music"
        android:name="com.example.littlebeachblog.ui.page.music.MusicFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_music" />
    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.littlebeachblog.ui.page.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />
    <fragment
        android:id="@+id/navigation_me"
        android:name="com.example.littlebeachblog.ui.page.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" />
    <activity
        android:id="@+id/fishDetailActivity"
        android:name="com.example.littlebeachblog.ui.page.home.FishDetailActivity"
        android:label="FishDetailActivity"
        tools:layout="@layout/activity_fish_detail" />

</navigation>